--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -1219,7 +1219,7 @@ font-family: 'Times New Roman', Times, serif;
         height: 100%;
     }
     .side-scroll .imageSelect-FilePreview{
-        width: 100% !important;
+        width: auto !important;
         z-index: 9999;
     }
 
