--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -678,7 +678,7 @@ font-family: 'Times New Roman', Times, serif;
 }
 .foreground-transition{
     // transition: 0.4s all;
-    transition: height 0.4s, width 0.4s, opacity 0.7s;
+    // transition: height 0.4s, width 0.4s, opacity 0.7s;
 }
 
 .imageSelect-FilePreview{
