--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -818,6 +818,7 @@ label {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: absolute;
 }
 
 .enlarge-border {
@@ -1398,6 +1399,10 @@ label {
     position: absolute;
     bottom: 0;
   }
+  .enlarge-down {
+    -webkit-transform: translateY(0) !important;
+            transform: translateY(0) !important;
+  }
   #root {
     height: 100%;
   }
@@ -1476,19 +1481,11 @@ label {
     background-color: white;
     z-index: 999;
     width: 100% !important;
-    height: 100%;
-    -webkit-transition: 0.2s -webkit-transform;
-    transition: 0.2s -webkit-transform;
-    transition: 0.2s transform;
-    transition: 0.2s transform, 0.2s -webkit-transform;
-    z-index: 999;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
     border-right: none;
     border-left: none;
     border-top: none;
-    grid-row-start: 2;
-    grid-row-end: 3;
+    height: 100%;
+    z-index: 0;
   }
   .imageSelect-slide {
     -webkit-transform: translateX(250px);
@@ -1521,15 +1518,14 @@ label {
     -webkit-transform: translateY(-100%);
             transform: translateY(-100%);
     z-index: 999;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0);
     border-top: none;
     border-bottom: none;
     z-index: 1;
-    position: relative;
+    position: absolute;
     grid-row-start: 1;
     grid-row-end: 2;
     border-left: none;
-    height: 0px;
   }
   .enlargeContainer > div {
     height: auto;
