--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1686,18 +1686,32 @@ label {
     -webkit-transform: translateY(100%);
             transform: translateY(100%);
   }
+  .TagsMenu-container {
+    height: 200px;
+  }
   .TagsMenu-checkbox {
     top: initial;
     position: initial;
+    margin-left: 5px;
   }
   .TagsMenu-Accordion-label {
     border: 1px solid black;
     padding: 3px;
     margin: 2px;
-    min-width: 49%;
+    max-width: 49%;
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
+  }
+  .TagsMenu-category-container {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    background-color: lime;
+    z-index: 1;
   }
   .TagsMenu-categories {
     display: -webkit-box;
@@ -1705,11 +1719,67 @@ label {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    position: relative;
+    background-color: pink;
   }
   .title-letter {
     text-transform: uppercase;
     font-family: 'Times New Roman', Times, serif;
     font-weight: 600;
+  }
+  .TagsMenu-subcategory-container {
+    width: 100%;
+    height: 100%;
+    border-top: 1px solid black;
+    position: absolute;
+  }
+  .TagsMenu-subcategories {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    border: 1px solid red;
+    position: absolute;
+    bottom: 0;
+    -webkit-transition: 0.2s -webkit-transform;
+    transition: 0.2s -webkit-transform;
+    transition: 0.2s transform;
+    transition: 0.2s transform, 0.2s -webkit-transform;
+  }
+  .TagsMenu-listItems-container {
+    width: 100%;
+    height: 70px;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+  }
+  .TagsMenu-listitems-ul {
+    position: absolute;
+  }
+  .TagsMenu-bottomButtons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .TagsMenu-category-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    cursor: pointer;
+  }
+  .list-items, .subcategory {
+    display: none;
+  }
+  .scroll-down-category {
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
   }
 }
 /*# sourceMappingURL=main.css.map */
