--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -1292,25 +1292,79 @@ font-family: 'Times New Roman', Times, serif;
     .hide-imageSelect{
         transform: translateY(100%)
     }
+    .TagsMenu-container{
+        height: 200px;
+    }
     .TagsMenu-checkbox{
         top: initial;
         position: initial;
+        margin-left: 5px;
     }
     .TagsMenu-Accordion-label{
         border: 1px solid black;
         padding: 3px;
         margin: 2px;
-        min-width: 49%;
+        max-width: 49%;
         flex: 1;
+    }
+    .TagsMenu-category-container{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        background-color: lime;
+        z-index: 1;
+
     }
     .TagsMenu-categories{
         display: flex;
         flex-wrap: wrap;
+        position: relative;
+        background-color: pink;
     }
+
     .title-letter{
         text-transform: uppercase;
         font-family: 'Times New Roman', Times, serif;
         font-weight: 600;
+    }
+    .TagsMenu-subcategory-container{
+        width: 100%;
+        height: 100%;
+        border-top: 1px solid black;
+        position: absolute;
+    }
+    .TagsMenu-subcategories{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        border: 1px solid red;
+        position: absolute;
+        bottom: 0;
+        transition: 0.2s transform;
+    }
+    .TagsMenu-listItems-container{
+        width: 100%;
+        height: 70px;
+        border-bottom: 1px solid black;
+        border-top: 1px solid black;
+    }
+    .TagsMenu-listitems-ul{
+        position: absolute;
+    }
+    .TagsMenu-bottomButtons{
+        display: flex;
+    }
+    .TagsMenu-category-title{
+        display: flex;
+        justify-content: space-between;
+        flex: 1;
+        cursor: pointer;
+    }
+    .list-items, .subcategory{
+        display: none;
+    }
+    .scroll-down-category{
+        transform: translateY(100%);
     }
   }
 
