--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1687,7 +1687,7 @@ label {
             transform: translateY(100%);
   }
   .TagsMenu-container {
-    height: 200px;
+    overflow: visible;
   }
   .TagsMenu-checkbox {
     top: initial;
@@ -1722,6 +1722,18 @@ label {
     position: relative;
     background-color: pink;
   }
+  .TagsMenu-listitems-container {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    background-color: blueviolet;
+    position: absolute;
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
   .title-letter {
     text-transform: uppercase;
     font-family: 'Times New Roman', Times, serif;
@@ -1747,15 +1759,13 @@ label {
     transition: 0.2s -webkit-transform;
     transition: 0.2s transform;
     transition: 0.2s transform, 0.2s -webkit-transform;
+    background-color: cadetblue;
   }
   .TagsMenu-listItems-container {
     width: 100%;
-    height: 70px;
+    position: absolute;
     border-bottom: 1px solid black;
     border-top: 1px solid black;
-  }
-  .TagsMenu-listitems-ul {
-    position: absolute;
   }
   .TagsMenu-bottomButtons {
     display: -webkit-box;
@@ -1780,6 +1790,22 @@ label {
   .scroll-down-category {
     -webkit-transform: translateY(100%);
             transform: translateY(100%);
+  }
+  .TagsMenu-about-contact {
+    height: 50px;
+    border: 3px solid blue;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+  }
+  .TagsMenu-category-button-container {
+    background-color: yellow;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    position: relative;
   }
 }
 /*# sourceMappingURL=main.css.map */
