--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -1293,7 +1293,7 @@ font-family: 'Times New Roman', Times, serif;
         transform: translateY(100%)
     }
     .TagsMenu-container{
-        height: 200px;
+        overflow: visible;
     }
     .TagsMenu-checkbox{
         top: initial;
@@ -1321,6 +1321,14 @@ font-family: 'Times New Roman', Times, serif;
         position: relative;
         background-color: pink;
     }
+    .TagsMenu-listitems-container{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        background-color: blueviolet;
+        position: absolute;
+        transform: translateY(-100%);
+    }
 
     .title-letter{
         text-transform: uppercase;
@@ -1341,16 +1349,17 @@ font-family: 'Times New Roman', Times, serif;
         position: absolute;
         bottom: 0;
         transition: 0.2s transform;
+        background-color: cadetblue;
     }
     .TagsMenu-listItems-container{
         width: 100%;
-        height: 70px;
+        position: absolute;
         border-bottom: 1px solid black;
         border-top: 1px solid black;
     }
-    .TagsMenu-listitems-ul{
-        position: absolute;
-    }
+    // .TagsMenu-listitems-ul{
+    //     position: absolute;
+    // }
     .TagsMenu-bottomButtons{
         display: flex;
     }
@@ -1365,6 +1374,19 @@ font-family: 'Times New Roman', Times, serif;
     }
     .scroll-down-category{
         transform: translateY(100%);
+    }
+    .TagsMenu-about-contact{
+        height: 50px;
+        border: 3px solid blue;
+        position: absolute;
+        top: 100%;
+        width: 100%;
+    }
+    .TagsMenu-category-button-container{
+        background-color: yellow;
+        display: flex;
+        flex-wrap: wrap;
+        position: relative;
     }
   }
 
