--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1499,6 +1499,7 @@ label {
     overflow-x: auto;
     border-top: 1px solid;
     height: 90px;
+    overflow-y: hidden;
   }
   .enlargeContainer {
     -ms-grid-column: 1;
@@ -1724,13 +1725,13 @@ label {
   }
   .TagsMenu-listitems-container {
     width: 100%;
+    height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     background-color: blueviolet;
-    position: absolute;
     -webkit-transform: translateY(-100%);
             transform: translateY(-100%);
   }
@@ -1744,6 +1745,7 @@ label {
     height: 100%;
     border-top: 1px solid black;
     position: absolute;
+    bottom: 0;
   }
   .TagsMenu-subcategories {
     width: 100%;
@@ -1766,6 +1768,14 @@ label {
     position: absolute;
     border-bottom: 1px solid black;
     border-top: 1px solid black;
+    bottom: 0;
+  }
+  .TagsMenu-listitem {
+    position: absolute;
+    bottom: 0;
+    z-index: 7;
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
   }
   .TagsMenu-bottomButtons {
     display: -webkit-box;
@@ -1784,19 +1794,19 @@ label {
             flex: 1;
     cursor: pointer;
   }
-  .list-items, .subcategory {
-    display: none;
-  }
-  .scroll-down-category {
+  .scroll-down {
     -webkit-transform: translateY(100%);
             transform: translateY(100%);
   }
   .TagsMenu-about-contact {
-    height: 50px;
-    border: 3px solid blue;
-    position: absolute;
-    top: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     width: 100%;
+    position: relative;
+    z-index: 999;
   }
   .TagsMenu-category-button-container {
     background-color: yellow;
@@ -1806,6 +1816,26 @@ label {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     position: relative;
+    z-index: 9;
+  }
+  .button-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 100%;
+  }
+  .subcategories {
+    background-color: lime;
+    z-index: 8;
+  }
+  .aboutbutton {
+    width: 100%;
+    height: 80px;
+    background-color: pink;
+    position: absolute;
+    top: 100%;
   }
 }
 /*# sourceMappingURL=main.css.map */
