--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -1125,6 +1125,7 @@ font-family: 'Times New Roman', Times, serif;
         overflow-x: auto;
         border-top: 1px solid;
         height: 90px;
+        overflow-y: hidden;
     }
     // .side-scroll > div {
     //     max-width: 120px;
@@ -1323,10 +1324,10 @@ font-family: 'Times New Roman', Times, serif;
     }
     .TagsMenu-listitems-container{
         width: 100%;
+        height: 100%;
         display: flex;
         flex-wrap: wrap;
         background-color: blueviolet;
-        position: absolute;
         transform: translateY(-100%);
     }
 
@@ -1340,6 +1341,7 @@ font-family: 'Times New Roman', Times, serif;
         height: 100%;
         border-top: 1px solid black;
         position: absolute;
+        bottom: 0;
     }
     .TagsMenu-subcategories{
         width: 100%;
@@ -1356,6 +1358,13 @@ font-family: 'Times New Roman', Times, serif;
         position: absolute;
         border-bottom: 1px solid black;
         border-top: 1px solid black;
+        bottom: 0;
+    }
+    .TagsMenu-listitem{
+        position: absolute;
+        bottom: 0;
+        z-index: 7;
+        transition: 0.2s all;
     }
     // .TagsMenu-listitems-ul{
     //     position: absolute;
@@ -1369,24 +1378,49 @@ font-family: 'Times New Roman', Times, serif;
         flex: 1;
         cursor: pointer;
     }
-    .list-items, .subcategory{
-        display: none;
-    }
-    .scroll-down-category{
+    // .list-items, .subcategory{
+    //     display: none;
+    // }
+    .scroll-down{
         transform: translateY(100%);
     }
     .TagsMenu-about-contact{
-        height: 50px;
-        border: 3px solid blue;
-        position: absolute;
-        top: 100%;
+        // height: 50px;
+        // border: 3px solid blue;
+        // position: absolute;
+        // top: 100%;
+        // width: 100%;
+        display: flex;
+        flex-wrap: wrap;
         width: 100%;
+        position: relative;
+        z-index: 999;
     }
     .TagsMenu-category-button-container{
         background-color: yellow;
         display: flex;
         flex-wrap: wrap;
         position: relative;
+        z-index: 9;
+    }
+    .button-wrapper{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    .subcategories{
+        background-color: lime;
+        z-index: 8;
+    }
+    .aboutbutton{
+        width: 100%;
+        height: 80px;
+        background-color: pink;
+        position: absolute;
+        top: 100%;
+    }
+    #contact{
+
     }
   }
 
