--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -392,9 +392,8 @@ $border-main-color: #bbb;
     font-size: 12px;
     text-transform: uppercase;
     list-style-type: none;
-    border-left: 1px solid;
-    border-right: 1px solid;
     margin: 0;
+    padding: 0;
 }
 .tagsMenu-list input{
     margin-left: 8px;
@@ -1038,6 +1037,132 @@ font-family: 'Times New Roman', Times, serif;
     width: 100%;
 }
 
+//*****************************************
+.TagsMenu-checkbox{
+    top: initial;
+    position: initial;
+    margin-left: 5px;
+}
+.TagsMenu-Accordion-label{
+    border: 1px solid black;
+    padding: 3px;
+    margin: 3px;
+    // width: 48%;
+    flex: 1 1 48%;
+}
+.TagsMenu-category-container{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    z-index: 1;
+
+}
+.TagsMenu-categories{
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+}
+.TagsMenu-listitems-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    border-top: 1px solid black;
+    padding: 4px 24px;
+}
+
+.title-letter{
+    text-transform: uppercase;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 600;
+}
+.TagsMenu-subcategory-container{
+    width: 100%;
+    border-top: 1px solid black;
+}
+.TagsMenu-subcategories{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    transition: 0.2s transform;
+    height: 0;
+    overflow: hidden;
+}
+.TagsMenu-listItems-container{
+    width: 100%;
+    position: absolute;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    bottom: 0;
+}
+.TagsMenu-listitem{
+    z-index: 7;
+    transition: 0.2s all;
+    height: 0;
+    overflow: hidden;
+}
+// .TagsMenu-listitems-ul{
+//     position: absolute;
+// }
+.TagsMenu-bottomButtons{
+    display: flex;
+}
+.TagsMenu-category-title{
+    display: flex;
+    justify-content: space-between;
+    flex: 1;
+    cursor: pointer;
+}
+// .list-items, .subcategory{
+//     display: none;
+// }
+.scroll-down{
+    height: auto;
+    padding: 4px 24px;
+    // transform: translateY(100%);
+}
+.TagsMenu-about-contact{
+    // height: 50px;
+    // border: 3px solid blue;
+    // position: absolute;
+    // top: 100%;
+    // width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    position: relative;
+    z-index: 999;
+}
+.TagsMenu-category-button-container{
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    z-index: 9;
+}
+.button-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.subcategories{
+    z-index: 8;
+}
+.aboutbutton{
+    width: 100%;
+    height: 80px;
+    position: absolute;
+    top: 100%;
+}
+.category-title-letter{
+    font-size: 18px;
+}
+.subcategory-title-letter{
+    font-size: 14px;
+}
+.listitem-title-letter{
+    font-size: 12px;
+}
+
 //MEDIA QUERY MOBILE *************************************************************************************************************
 @media only screen and (max-width: 720px) {
     body{
@@ -1072,6 +1197,7 @@ font-family: 'Times New Roman', Times, serif;
         border-right: 1px solid;
         max-height: calc(100vh - 144px);
         border-bottom: none;
+        overflow-y: scroll;
     }
     .TagsMenu-max{
         max-height: calc(100vh - 143px);
@@ -1293,9 +1419,9 @@ font-family: 'Times New Roman', Times, serif;
     .hide-imageSelect{
         transform: translateY(100%)
     }
-    .TagsMenu-container{
-        overflow: visible;
-    }
+    // .TagsMenu-container{
+    //     overflow: visible;
+    // }
     .TagsMenu-checkbox{
         top: initial;
         position: initial;
@@ -1304,15 +1430,14 @@ font-family: 'Times New Roman', Times, serif;
     .TagsMenu-Accordion-label{
         border: 1px solid black;
         padding: 3px;
-        margin: 2px;
-        max-width: 49%;
-        flex: 1;
+        margin: 3px;
+        // width: 48%;
+        flex: 1 1 48%;
     }
     .TagsMenu-category-container{
         width: 100%;
         display: flex;
         flex-wrap: wrap;
-        background-color: lime;
         z-index: 1;
 
     }
@@ -1320,15 +1445,14 @@ font-family: 'Times New Roman', Times, serif;
         display: flex;
         flex-wrap: wrap;
         position: relative;
-        background-color: pink;
     }
     .TagsMenu-listitems-container{
         width: 100%;
         height: 100%;
         display: flex;
         flex-wrap: wrap;
-        background-color: blueviolet;
-        transform: translateY(-100%);
+        border-top: 1px solid black;
+        padding: 4px 24px;
     }
 
     .title-letter{
@@ -1338,20 +1462,15 @@ font-family: 'Times New Roman', Times, serif;
     }
     .TagsMenu-subcategory-container{
         width: 100%;
-        height: 100%;
         border-top: 1px solid black;
-        position: absolute;
-        bottom: 0;
     }
     .TagsMenu-subcategories{
         width: 100%;
         display: flex;
         flex-wrap: wrap;
-        border: 1px solid red;
-        position: absolute;
-        bottom: 0;
         transition: 0.2s transform;
-        background-color: cadetblue;
+        height: 0;
+        overflow: hidden;
     }
     .TagsMenu-listItems-container{
         width: 100%;
@@ -1361,10 +1480,10 @@ font-family: 'Times New Roman', Times, serif;
         bottom: 0;
     }
     .TagsMenu-listitem{
-        position: absolute;
-        bottom: 0;
         z-index: 7;
         transition: 0.2s all;
+        height: 0;
+        overflow: hidden;
     }
     // .TagsMenu-listitems-ul{
     //     position: absolute;
@@ -1382,7 +1501,9 @@ font-family: 'Times New Roman', Times, serif;
     //     display: none;
     // }
     .scroll-down{
-        transform: translateY(100%);
+        height: auto;
+        padding: 4px 24px;
+        // transform: translateY(100%);
     }
     .TagsMenu-about-contact{
         // height: 50px;
@@ -1397,7 +1518,6 @@ font-family: 'Times New Roman', Times, serif;
         z-index: 999;
     }
     .TagsMenu-category-button-container{
-        background-color: yellow;
         display: flex;
         flex-wrap: wrap;
         position: relative;
@@ -1409,18 +1529,22 @@ font-family: 'Times New Roman', Times, serif;
         width: 100%;
     }
     .subcategories{
-        background-color: lime;
         z-index: 8;
     }
     .aboutbutton{
         width: 100%;
         height: 80px;
-        background-color: pink;
         position: absolute;
         top: 100%;
     }
-    #contact{
-
+    .category-title-letter{
+        font-size: 18px;
+    }
+    .subcategory-title-letter{
+        font-size: 14px;
+    }
+    .listitem-title-letter{
+        font-size: 12px;
     }
   }
 
