--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -355,6 +355,7 @@ $border-main-color: #bbb;
     position: absolute;
     right: -1px;
     top: 6px;
+    cursor: pointer;
 }
 .TagsMenu-checkbox_subcategory{
     position: absolute;
@@ -1068,7 +1069,7 @@ font-family: 'Times New Roman', Times, serif;
     display: flex;
     flex-wrap: wrap;
     border-top: 1px solid black;
-    padding: 4px 24px;
+    position: absolute;
 }
 
 .title-letter{
@@ -1079,14 +1080,20 @@ font-family: 'Times New Roman', Times, serif;
 .TagsMenu-subcategory-container{
     width: 100%;
     border-top: 1px solid black;
+    position: relative;
 }
 .TagsMenu-subcategories{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     transition: 0.2s transform;
-    height: 0;
     overflow: hidden;
+    position: absolute;
+    bottom: 0;
+    overflow: visible;
+    background-color: white;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
 }
 .TagsMenu-listItems-container{
     width: 100%;
@@ -1098,8 +1105,14 @@ font-family: 'Times New Roman', Times, serif;
 .TagsMenu-listitem{
     z-index: 7;
     transition: 0.2s all;
-    height: 0;
     overflow: hidden;
+    position: absolute;
+    bottom: 0;
+    padding: 4px 40px;  
+    border-bottom: 1px solid;
+}
+#TagsMenu-listitems-container{
+    display: none;
 }
 // .TagsMenu-listitems-ul{
 //     position: absolute;
@@ -1117,9 +1130,10 @@ font-family: 'Times New Roman', Times, serif;
 //     display: none;
 // }
 .scroll-down{
-    height: auto;
-    padding: 4px 24px;
-    // transform: translateY(100%);
+    // height: auto;
+    // padding: 4px 24px;
+    transform: translateY(100%);
+    border-top: 0;
 }
 .TagsMenu-about-contact{
     // height: 50px;
@@ -1138,14 +1152,18 @@ font-family: 'Times New Roman', Times, serif;
     flex-wrap: wrap;
     position: relative;
     z-index: 9;
+    background-color: white;
 }
 .button-wrapper{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    background-color: white;
 }
 .subcategories{
     z-index: 8;
+    background-color: white;
+    padding: 4px 20px;
 }
 .aboutbutton{
     width: 100%;
@@ -1161,6 +1179,19 @@ font-family: 'Times New Roman', Times, serif;
 }
 .listitem-title-letter{
     font-size: 12px;
+}
+.shadow{
+    box-shadow: inset 0px 24px 26px -19px rgba(0,0,0,0.6);
+    position: absolute;
+    height: 100%;
+    widows: 100%;
+}
+.no-click{
+    cursor: default;
+}
+#contact-subcategories *{
+    width: 100%;
+    margin-left: 6vw !important;
 }
 
 //MEDIA QUERY MOBILE *************************************************************************************************************
@@ -1198,6 +1229,7 @@ font-family: 'Times New Roman', Times, serif;
         max-height: calc(100vh - 144px);
         border-bottom: none;
         overflow-y: scroll;
+        overflow: visible;
     }
     .TagsMenu-max{
         max-height: calc(100vh - 143px);
@@ -1418,136 +1450,6 @@ font-family: 'Times New Roman', Times, serif;
     }
     .hide-imageSelect{
         transform: translateY(100%)
-    }
-    // .TagsMenu-container{
-    //     overflow: visible;
-    // }
-    .TagsMenu-checkbox{
-        top: initial;
-        position: initial;
-        margin-left: 5px;
-    }
-    .TagsMenu-Accordion-label{
-        border: 1px solid black;
-        padding: 3px;
-        margin: 3px;
-        // width: 48%;
-        flex: 1 1 48%;
-    }
-    .TagsMenu-category-container{
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        z-index: 1;
-
-    }
-    .TagsMenu-categories{
-        display: flex;
-        flex-wrap: wrap;
-        position: relative;
-    }
-    .TagsMenu-listitems-container{
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        border-top: 1px solid black;
-        padding: 4px 24px;
-    }
-
-    .title-letter{
-        text-transform: uppercase;
-        font-family: 'Times New Roman', Times, serif;
-        font-weight: 600;
-    }
-    .TagsMenu-subcategory-container{
-        width: 100%;
-        border-top: 1px solid black;
-    }
-    .TagsMenu-subcategories{
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        transition: 0.2s transform;
-        height: 0;
-        overflow: hidden;
-    }
-    .TagsMenu-listItems-container{
-        width: 100%;
-        position: absolute;
-        border-bottom: 1px solid black;
-        border-top: 1px solid black;
-        bottom: 0;
-    }
-    .TagsMenu-listitem{
-        z-index: 7;
-        transition: 0.2s all;
-        height: 0;
-        overflow: hidden;
-    }
-    // .TagsMenu-listitems-ul{
-    //     position: absolute;
-    // }
-    .TagsMenu-bottomButtons{
-        display: flex;
-    }
-    .TagsMenu-category-title{
-        display: flex;
-        justify-content: space-between;
-        flex: 1;
-        cursor: pointer;
-    }
-    // .list-items, .subcategory{
-    //     display: none;
-    // }
-    .scroll-down{
-        height: auto;
-        padding: 4px 24px;
-        // transform: translateY(100%);
-    }
-    .TagsMenu-about-contact{
-        // height: 50px;
-        // border: 3px solid blue;
-        // position: absolute;
-        // top: 100%;
-        // width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        position: relative;
-        z-index: 999;
-    }
-    .TagsMenu-category-button-container{
-        display: flex;
-        flex-wrap: wrap;
-        position: relative;
-        z-index: 9;
-    }
-    .button-wrapper{
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-    }
-    .subcategories{
-        z-index: 8;
-    }
-    .aboutbutton{
-        width: 100%;
-        height: 80px;
-        position: absolute;
-        top: 100%;
-    }
-    .category-title-letter{
-        font-size: 18px;
-    }
-    .subcategory-title-letter{
-        font-size: 14px;
-    }
-    .listitem-title-letter{
-        font-size: 12px;
-    }
-    #contact-subcategories *{
-        width: 100%;
     }
   }
 
