--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1406,6 +1406,10 @@ label {
           flex: 1 1 48%;
 }
 
+.TagsMenu-Accordion-label:hover {
+  background-color: lime;
+}
+
 .TagsMenu-category-container {
   width: 100%;
   display: -webkit-box;
